manifests/troubleshooting/err-httproute-hostname-mismatch.yaml
# Troubleshooting: NoMatchingListenerHostname Error
# Trigger: Route requests a hostname "unauthorized.corp.lab" that is not permitted by Gateway listener ("podinfo.lab").
# Expected Condition on HTTPRoute:
#   Type: Accepted, Status: False, Reason: NoMatchingListenerHostname
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: err-hostname-mismatch
  namespace: demo
spec:
  parentRefs:
    - name: web
      namespace: infra
      sectionName: web
  hostnames:
    - "unauthorized.corp.lab"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: podinfo-v1
          port: 9898
